--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,12 @@
 
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Bob Belderbos • Software | Coding | Building cool stuff" />
-<meta property="og:description" content="I am passionate about web technologies and software development" />
-<meta property="og:url" content="http://bobbelderbos.com" />
-<meta property="og:site_name" content="Bob Belderbos" />
-<meta property="fb:admins" content="628517118" />
-<meta property="og:image" content="http://bobbelderbos.com/logo.png" />
+<meta property="og:title" content="Improve your Japanese reading - Free for a Limited Time!" />
+<meta property="og:description" content="Improve your Japanese reading effortlessly with fully translated and annotated contents, delivered daily to you." />
+<meta property="og:url" content="https://yomu-lab-production.herokuapp.com" />
+<meta property="og:site_name" content="Yomu Lab" />
+<meta property="fb:admins" content="903744876407538" />
+<meta property="og:image" content="https://yomu-lab-staging.herokuapp.com/assets/bg.jpg" />
 
 
 <!-- You can use Open Graph tags to customize link previews.
