--- a/app/views/home/tell_your_friends.html.erb
+++ b/app/views/home/tell_your_friends.html.erb
@@ -13,9 +13,6 @@
       </p>
     </header>    
     <section>
-<!--
-<a id="facebook" href="http://www.facebook.com/share.php?u=http://www.worldlifestyle.com/trending/never-seen-images-woodstock-1969-2/&amp;title=Never Before Seen Images Of Woodstock 1969" target="_blank" class="socialFB socialbar"><i class="fa fa-facebook"></i><span>Share</span></a>
--->
       <div class="sharetwithriends">
         <p class="text-center" style="color:red;">{{current_user.email}}<br/>
         {{current_user.authentication_token}}</p>
@@ -34,9 +31,6 @@
           <a onclick="fbShare('700', '600');" href="#" title="Share on Facebook" class="btn btn-facebook"><i class="fa fa-facebook"></i> Facebook</a>
           <!-- Google+ -->
           <a href="https://plus.google.com/share?url={{referral_url}}" title="Share on Google+" target="_blank" class="btn btn-googleplus"><i class="fa fa-google-plus"></i> Google+</a>
-
-
-          <a id="facebook" href="http://www.facebook.com/share.php?u={{referral_url}}&title=YomuLabs" target="_blank" class="socialFB socialbar"><i class="fa fa-facebook"></i><span>Share</span></a>          
         </p>
         </div>
         <div class="col-md-5 signedupFriends col-centered">
@@ -120,6 +114,6 @@
     var caption_content = "Improve your Japanese reading - Free for a Limited Time!";
     var description = "Improve your Japanese reading effortlessly with fully translated and annotated contents, delivered daily to you.";
 
-    window.open("https://www.facebook.com/dialog/feed?app_id="+app_id+"&redirect_uri=https://www.facebook.com&link="+redirect_uri+"&picture="+picture_url+"&caption="+caption_content+"&description="+description+"&properties{text:'value1',key2:'value2'}&message='tuine&actions={name:'Improve your Japanese reading - Free for a Limited Time!',link:'"+host_url+"'}",'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=' + winWidth + ',height=' + winHeight);
+    window.open("https://www.facebook.com/dialog/feed?app_id="+app_id+"&redirect_uri=https://www.facebook.com&link="+redirect_uri+"&title="+caption_content+"&picture="+picture_url+"&caption="+caption_content+"&description="+description+"&properties{text:'value1',key2:'value2'}&message='tuine&actions={name:'Improve your Japanese reading - Free for a Limited Time!',link:'"+host_url+"'}",'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=' + winWidth + ',height=' + winHeight);
     }
 </script>
