--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <meta property="og:description" content="Improve your Japanese reading effortlessly with fully translated and annotated contents, delivered daily to you." />
   <meta property="og:url" content="https://yomu-lab-production.herokuapp.com" />
   <meta property="og:site_name" content="Yomu Lab" />
-  <meta property="og:image" content="https://yomu-lab-staging.herokuapp.com/assets/bg.jpg" />
+  <meta property="og:image" content="https://yomu-lab-production.herokuapp.com/assets/bg.jpg" />
 
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <!--
