--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,13 +1,16 @@
 <%
   url = root_url if url.nil?
   if url.include?('staging')
-    present_domain = "staging"
+    reset_password_url = "https://yomu-lab-staging.herokuapp.com/ResetPassword/?token="+@token
+
   elsif url.include?('production')
-    present_domain = "production"
+    reset_password_url = "https://yomu-lab-production.herokuapp.com/ResetPassword/?token="+@token
+
   elsif url.include?('yomulab')
-    present_domain = "yomulab"
+    reset_password_url = "http://yomulab.com/ResetPassword/?token="+@token
+
   else
-    present_domain = "localhost"
+    reset_password_url = "http://localhost:3000/ResetPassword/?token="+@token
   end
 %>
 
@@ -25,26 +28,9 @@
       Click this link below to confirm your account.
     </p>
     <br/>
-
-    <% if present_domain == "staging" %>
     <p>
-      <a href="https://yomu-lab-staging.herokuapp.com/ReconfirmUser/?confirmation_token=<%=@token %>">Click Here</a>
+      <a href="<%=reset_password_url %>">Reset Here</a>
     </p>
-    <% end %>
-    <br/>
-    
-    <% if present_domain == "production" %>
-    <p>
-      <a href="https://yomu-lab-production.herokuapp.com/ReconfirmUser/?confirmation_token=<%=@token %>">Click Here</a>
-    </p>
-    <% end %>
-    <br/>
-
-    <% if present_domain == "localhost" %>
-    <p>
-      <%= link_to 'Local-Host-Verify-Now', confirmation_url(@resource, confirmation_token: @token) %>
-    </p>
-    <% end %>
     
     <br/>
     <br/>
@@ -53,4 +39,3 @@
     </p>
   </body>
 </html>
-
