ChangeInUrl-ConfirmLink-ResetPwdLink

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -4,7 +4,8 @@
     confirmation_url = "https://yomu-lab-staging.herokuapp.com/ReconfirmUser/?confirmation_token="+@token
 
   elsif url.include?('production')
-    confirmation_url = "https://yomu-lab-production.herokuapp.com/ReconfirmUser/?confirmation_token="+@token
+    # confirmation_url = "https://yomu-lab-production.herokuapp.com/ReconfirmUser/?confirmation_token="+@token
+    confirmation_url = "http://yomulab.com/ReconfirmUser/?confirmation_token="+@token
 
   elsif url.include?('yomulab')
     confirmation_url = "http://yomulab.com/ReconfirmUser/?confirmation_token="+@token
