--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -4,7 +4,8 @@
     reset_password_url = "https://yomu-lab-staging.herokuapp.com/ResetPassword/?token="+@token
 
   elsif url.include?('production')
-    reset_password_url = "https://yomu-lab-production.herokuapp.com/ResetPassword/?token="+@token
+    #reset_password_url = "https://yomu-lab-production.herokuapp.com/ResetPassword/?token="+@token
+    reset_password_url = "http://yomulab.com/ResetPassword/?token="+@token
 
   elsif url.include?('yomulab')
     reset_password_url = "http://yomulab.com/ResetPassword/?token="+@token
