--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -5,10 +5,10 @@
 
   elsif url.include?('production')
     #reset_password_url = "https://yomu-lab-production.herokuapp.com/ResetPassword/?token="+@token
-    reset_password_url = "http://yomulab.com/ResetPassword/?token="+@token
+    reset_password_url = "http://www.yomulab.com/ResetPassword/?token="+@token
 
   elsif url.include?('yomulab')
-    reset_password_url = "http://yomulab.com/ResetPassword/?token="+@token
+    reset_password_url = "http://www.yomulab.com/ResetPassword/?token="+@token
 
   else
     reset_password_url = "http://localhost:3000/ResetPassword/?token="+@token
