--- a/app/views/home/tell_your_friends.html.erb
+++ b/app/views/home/tell_your_friends.html.erb
@@ -14,7 +14,7 @@
     </header>
     <section>
       <div class="sharetwithriends">
-        <p class="text-center" style="color:red;">{{current_user.email}}</p>
+        <p class="text-center hide" style="color:red;">{{current_user.email}}</p>
         <p class="text-center">Tell your friends and get up to 80 free articles after beta period!</p>
         <p class="small text-center">Share your unique link via Facebook, Twitter, Google Plus or Email</p>
         <div class="col-md-6 col-centered">
