--- a/app/views/home/forgot_password.html.erb
+++ b/app/views/home/forgot_password.html.erb
@@ -25,9 +25,10 @@
           <input type="text" placeholder="Email" class="form-control" ng-model="forgotPasswordForm.email" name="email" required="required" />
         </div>
 
-        <div class="form-group">
+        <div class="form-group waiting-loader">
           <button type="submit" ng-click="forgot_password(forgotPasswordForm.email);" class="btn btn-default btn-block submitbtn">
             Send
+            <i class="fa fa-refresh fa-spin hidden loader"></i>
           </button>
         </div>
       </form>
