--- a/app/views/home/sign_up.html.erb
+++ b/app/views/home/sign_up.html.erb
@@ -34,8 +34,10 @@
           <input type="hidden" data-ng-model="sign_up_form.prelaunch_ref" value="<%=params[:prelaunch_ref]%>" name="prelaunch_ref" placeholder="<%=params[:prelaunch_ref]%>" />
 
         </div>
-        <div class="form-group">
-          <button type="submit" ng-click="submit_sign_up_details(sign_up_form, '<%=params[:prelaunch_ref]%>');" class="btn btn-default btn-block submitbtn">Sign Up</button>
+        <div class="form-group waiting-loader">
+          <button type="submit" ng-click="submit_sign_up_details(sign_up_form, '<%=params[:prelaunch_ref]%>');" class="btn btn-default btn-block submitbtn">Sign Up
+          <i class="fa fa-refresh fa-spin hidden loader"></i>
+          </button>
         </div>
       </form>
       <%= render "partials/social_sign_footer" %>
