--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -20,3 +20,24 @@
   font-size: 13px;
 }
 
+/* Annotatin Notificatin Box */
+
+.annotation_notification {
+  position: absolute;
+  top: -1px;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+}
+.annotation_notification .msgBox {
+  padding: 2px;
+  font-size: 13px;
+}
+.annotation_notification.success_box {
+  border: 1px solid #66be60;
+  color: #66be60;
+}
+.annotation_notification.error_box {
+  border: 1px solid #66be60;
+  color: #66be60;
+}
