Change - For fetching annotation of existing keywords

--- a/app/views/admin/create_article_step1.html.erb
+++ b/app/views/admin/create_article_step1.html.erb
@@ -10,7 +10,7 @@
         <div class="clearfix">
           <div class="form-group col-md-12">
             <input type="text" placeholder="Enter your title *" class="form-control" ng-model="article.title" name="title" required="required" />
-            <input type="text" placeholder="" class="form-control" ng-model="article.id" name="id"/>
+            <input type="hidden" placeholder="" class="form-control" ng-model="article.id" name="id" disabled="" />
 
           </div>
         </div>
