--- a/app/views/admin/create_article_step2.html.erb
+++ b/app/views/admin/create_article_step2.html.erb
@@ -18,7 +18,7 @@
 
     <div class="col-md-5">
       <div class="col-md-11 col-centered">
-        <h4 id="selectedWord">づ蛣䦌姨驚</h4>
+        <h4 id="selectedWord">&nbsp;</h4>
       </div>
     </div>
 
@@ -51,8 +51,8 @@
 
             <h2 lang="ja" id="articleHeading">{{article.title}}</h2>
 
-            <div class="articleContent editable">
-              <p lang="ja">{{article.body}}</p>
+            <div class="articleContent editable" >
+              <p lang="ja" id="article_content" >{{article.body}}</p>
             </div>
 
             <div class="clearfix">
@@ -84,11 +84,8 @@
 
           <!-- Form Start -->
           <form class="form-horizontal">
-          Category
-            <input type="text" class="form-control" ng-model="annotation.selected_annotation_category" />
-            annotation
-            <input type="text" class="form-control" id="source_text" ng-model="annotation.source_text" />
-
+            <input type="hidden" class="form-control" id="selected_annotation_category" disabled="" />
+            <input type="hidden" class="form-control" id="source_text" ng-model="annotation.source_text" disabled="" />
             <div class="form-group">
               <label for="conjugation" class="col-sm-3 control-label">Original Conjugation</label>
               <div class="col-sm-9">
@@ -137,7 +134,7 @@
                   <button type="submit" class="btn btn-primary btn-block" ng-click="create_annotation(annotation);">Save</button>
                 </div>
                 <div class="col-md-5">
-                  <button type="submit" class="btn btn-default btn-block">Discard</button>
+                  <button type="submit" class="btn btn-default btn-block" ng-click="discard_annotation_data();">Discard</button>
                 </div>
               </div>
             </div>
@@ -163,7 +160,12 @@ YomuLabAnnotation.Selector = {};
 YomuLabAnnotation.Selector.getSelected = function(){
   var t = '';
   if(window.getSelection){
-    t = window.getSelection();
+    try {
+      if (window.getSelection().anchorNode.parentNode.id == 'article_content'){      
+        t = window.getSelection();
+      }
+    }
+    catch(err) { }
   }else if(document.getSelection){
     t = document.getSelection();
   }else if(document.selection){
@@ -175,11 +177,14 @@ YomuLabAnnotation.Selector.getSelected = function(){
 YomuLabAnnotation.Selector.mouseup = function(){
   var st = YomuLabAnnotation.Selector.getSelected();
   if(st!=''){
-    $("#selectedWord").text(st);
-    $("#source_text").val(st);
-    var selected_string = $("#source_text").val();
-    console.log("selected_strin"+selected_string);
-    angular.element(document.getElementById('adminAnnotation')).scope().fetch_data_for_existing_annotation(selected_string);
+    var existing_selected_string = $("#source_text").val();
+    if (existing_selected_string != st){
+      $("#selectedWord").text(st);
+      $("#source_text").val(st);
+      var selected_string = $("#source_text").val();
+      angular.element(document.getElementById('adminAnnotation')).scope().fetch_data_for_existing_annotation(selected_string);
+    }
+
   }
 }
 
