--- a/app/views/partials/_admin_header.html.erb
+++ b/app/views/partials/_admin_header.html.erb
@@ -9,7 +9,7 @@
 	<div class="col-md-6 col-sm-10  col-centered clearfix">
 		<!-- Logo -->
 		<h1 id="logo" class="pull-left">
-			<a href="#"><img class="logo-head" alt="logo" src="/assets/logo_icon_nobg.svg" height="50" width="50" /></a>
+			<a href="/"><img class="logo-head" alt="logo" src="/assets/logo_icon_nobg.svg" height="50" width="50" /></a>
 		</h1>
 
     <aside class="pull-right">
@@ -17,7 +17,9 @@
 
       	<!-- Logged In User -->
        	<div class="dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-       		<div class="frame"><img alt="avtar" src="/assets/avtar.jpg" /></div> 
+       		<div class="frame">
+       			<img alt="avtar" src="/assets/avtar.jpg" />
+     			</div> 
        		Jason
 	     	</div>
       	<!-- End - Logged In User -->
