--- a/app/views/admin/create_article_step3.html.erb
+++ b/app/views/admin/create_article_step3.html.erb
@@ -1,44 +1,51 @@
-<section id="articleDetails" class="clearfix" ng-controller="YomuLabsAdminCtrl" ng-init="fetch_article_data_at_step3(<%=@article_id %>);">
-  <div class="col-md-6 col-centered">
+<div ng-controller="YomuLabsAdminCtrl" >
+  
+    <section id="articleDetails" class="clearfix" ng-init="fetch_article_data_at_step3(<%=@article_id %>);set_translations_scope();">
+      <div class="col-md-6 col-centered">
 
-    <!-- Steps - Start -->
-    <%= render "admin/article_process_steps" %>
-    <!-- Steps - End -->
+        <!-- Steps - Start -->
+        <%= render "admin/article_process_steps" %>
+        <!-- Steps - End -->
 
-    <header class="clearfix" id="articleInfo">
-      <span lang="en" class="pull-left source">Source: <a target="_blank" href="{{article.source_url}}">{{article.source_name}}</a></span>
-      <span lang="en" class="pull-right">Level: <a href="#">{{article.level}}</a></span>
-    </header>
-    <article id="articleBody" class="translation">
-      <!-- Form Start -->
-      <form>
-        <div id="translationPage">
-
-          <!-- Article Title & Meaning -->
-          <h2 id="articleHeading" lang="ja">{{article.title}}</h2>
-       
-          <div class="form-group">
-            <input type="text" class="form-control translatedText" value="Japanese Convenience Store Open in the Middle East for the First Time" placeholder="Enter Translation" />
-          </div>
-          <!-- End - Article Title & Meaning §sep§ -->
-          <!-- §sep§ as Seperator -->
-          <div class="articleContent">
-            <p lang="ja" ng-bind-html="article.body | create_input_box_with_ng_model"></p>
-          </div>
-
-        </div>
-      </form>
-      <!-- Form End -->
-    </article>
-  </div>
-</section>
-<footer id="articleReadFooter">
-  <div class="col-md-6 col-sm-10 col-centered clearfix">
-    <div class="clearfix">
-      <div class="form-group clearfix">
-        <a href="/admin/create_article_step2/{{article.id}}" class="btn btn-primary stepButton pull-left" type="submit">&lt;&lt; Previous</a>
-        <a href="/admin/create_article_step4/{{article.id}}" class="btn btn-primary stepButton pull-right" type="submit">Next &gt;&gt;</a>
+        <header class="clearfix" id="articleInfo">
+          <span lang="en" class="pull-left source">Source: <a target="_blank" href="{{article.source_url}}">{{article.source_name}}</a></span>
+          <span lang="en" class="pull-right">Level: <a href="#">{{article.level}}</a></span>
+        </header>
+        <article id="articleBody" class="translation">
+          <!-- Form Start -->
+            <div id="translationPage">
+              <!-- <input type="text" id="article_id" value="{{article.id}}" /> -->
+              <!-- Article Title & Meaning -->
+              <h2 id="articleHeading" lang="ja">{{article.title}}</h2>
+           
+              <form>
+              <div class="form-group">
+                <input type="text" class="form-control translatedText" ng-model="translation.title" placeholder="Enter Translation" />
+              </div>
+              <!-- End - Article Title & Meaning §sep§ -->
+              <!-- §sep§ as Seperator -->
+              <div class="articleContent">
+                <p compile lang="ja" ng-bind-html="article.body | create_input_box_with_ng_model"></p>
+              </div>
+            </div>
+          <!-- Form End -->
+        </article>
       </div>
-    </div>
-  </div>
-</footer>
+    </section>
+
+    <footer id="articleReadFooter">
+      <div class="col-md-6 col-sm-10 col-centered clearfix">
+        <div class="clearfix">
+          <div class="form-group clearfix">
+            <a href="/admin/create_article_step2/{{article.id}}" class="btn btn-primary stepButton pull-left" type="submit">&lt;&lt; Previous</a>
+            <!--
+             <a href="/admin/create_article_step4/{{article.id}}" class="btn btn-primary stepButton pull-right" type="submit">Save &gt;&gt;</a>
+             -->
+             <button ng-click="save_article_translation(translation, article.id);" class="btn btn-primary stepButton pull-right" type="submit">Save &gt;&gt;</button>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </form>
+
+</div>
