--- a/app/views/partials/_admin_header.html.erb
+++ b/app/views/partials/_admin_header.html.erb
@@ -1,6 +1,6 @@
 <header id="articleHeader">
 
-	<div class="article_message">
+	<div class="article_message response_message_box">
 		<div class="col-md-11 col-centered text-center {{message_type}}">
       <span>{{message_content}}</span>
     </div>
