--- a/app/views/home/tell_your_friends.html.erb
+++ b/app/views/home/tell_your_friends.html.erb
@@ -90,6 +90,8 @@
       </section>
       <footer id="tellyourfriendsFooter">
         <p class="text-center">You will receive credit for new accounts only. We reserve the right to end the promotion at any time and to disqualify entries suspected of frauds.</p>
+        <p class="text-center"><a href="/admin/dashboard">Admin Dashboard</a></p>
+        <br/>
         <p class="text-center">Questions? <a href="#">Email</a> us.</p>
         <p class="text-center" ng-controller="YomuLabsSignOutCtrl">Sign Out? <a href="#" ng-click="sign_out();">Click Here</a></p>
 
